--- a/app/views/student/registrations/new.html.erb
+++ b/app/views/student/registrations/new.html.erb
@@ -25,5 +25,5 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
+<%= link_to "LOGOUT", new_student_destroy_path, method: :delete%>
 <%= render "devise/shared/links" %>
