Crear manejo de Sesiones

--- a/app/views/student/ingresar.html.erb
+++ b/app/views/student/ingresar.html.erb
@@ -7,4 +7,6 @@
     <%= f.password_field :password%>
 
     <%= f.submit "Iniciar Sesión"%>
+    
+    <%= link_to "Registrar", action: "registrar"%>
 <% end %>
