--- a/app/views/company/ingresar.html.erb
+++ b/app/views/company/ingresar.html.erb
@@ -7,4 +7,5 @@
     <%= f.password_field :password%>
 
     <%= f.submit "Iniciar Sesión"%>
+    <%= link_to "Registrar", action: "registrar"%>
 <% end %>
