--- a/app/views/administrator/ingresar.html.erb
+++ b/app/views/administrator/ingresar.html.erb
@@ -1,10 +1,15 @@
-<%= form_for :new_admin_session, :url => {controller: "administrator", action: "crear_ingreso"} do |f| %>
+<%= form_for :new_admin_session, :url => {controller: "administrator", action: "crear_ingreso"}, html:{style:"max-width:700px", class: "m-5"} do |f| %>
+    <h2 class="text-muted">Bienvenido administrador</h2>
     
-    <%= f.label "Correo Electrónico"%>
-    <%= f.text_field :email%>
-
-    <%= f.label "Contraseña" %>
-    <%= f.password_field :password%>
-
-    <%= f.submit "Iniciar Sesión"%>
+    <div class="form-group">
+        <%= f.label "Correo Electrónico"%>
+        <%= f.text_field :email, class: "form-control"%>
+    </div>
+    
+    <div class="form-group">
+        <%= f.label "Contraseña" %>
+        <%= f.password_field :password, class: "form-control"%>
+    </div>
+    
+    <%= f.submit "Iniciar Sesión", class: "w-100 my-2 btn btn-success"%>
 <% end %>
